content/base.css
/* ... */
.abtn:hover {
    
    color: #f3f3f3;
    background-color: #468fae;
    background-image: -moz-linear-gradient(top, #468fae, #25aae1);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#468fae), to(#25aae1));
    background-image: -webkit-linear-gradient(top, #468fae, #25aae1);
    background-image: -o-linear-gradient(top, #468fae, #25aae1);
    background-image: linear-gradient(to bottom, #468fae, #25aae1);
    background-repeat: repeat-x;
    text-decoration: none;
}

.abtnactive {
    padding:  5px 20px 5px 20px;
    text-align: center;
    font-family: sans-serif;
    font-size: 12pt;
    cursor: pointer;
    border: solid 1px #888888;
    color: #f3f3f3;
    background-color: #468fae;
    background-image: -moz-linear-gradient(top, #468fae, #25aae1);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#468fae), to(#25aae1));
    background-image: -webkit-linear-gradient(top, #468fae, #25aae1);
    background-image: -o-linear-gradient(top, #468fae, #25aae1);
    background-image: linear-gradient(to bottom, #468fae, #25aae1);
    background-repeat: repeat-x;
    text-decoration: none;
    font-weight: bold;
    
}

.abtnactive:hover {
    padding:  5px 20px 5px 20px;
    text-align: center;
    font-family: sans-serif;
    font-size: 12pt;
    cursor: pointer;
    border: solid 1px #888888;
    color: #f3f3f3;
    background-color: #468fae;
    background-image: -moz-linear-gradient(top, #468fae, #25aae1);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#468fae), to(#25aae1));
    background-image: -webkit-linear-gradient(top, #468fae, #25aae1);
    background-image: -o-linear-gradient(top, #468fae, #25aae1);
    background-image: linear-gradient(to bottom, #468fae, #25aae1);
    background-repeat: repeat-x;
    text-decoration: none;
    font-weight: bold;
    
}


.ChartItemWrapper {
    width: 100%;
    min-width: 200px;
    border: solid 0px #ccc;
    margin: 0px;
    padding: 0px;
    vertical-align: top;
    text-align: center;
    display: inline-block; 
}
.ChartItem {
    width: 100%;
    min-width:180px;
    border: solid 0px #ccc;  
    display: inline-block;  
    vertical-align: middle;
    margin: 10px;
    font-size: 8pt;
    text-align: center;
    cursor: pointer;
}


.HomeChart {
    width: 100%;
    height: 400px;
    margin: auto;
}


svg {
  display: block;
}

#chart1 svg {
  height: 300px;
  min-width: 200px;
  min-height: 200px;
/*
  margin: 50px;
  Minimum height and width is a good idea to prevent negative SVG dimensions...
  For example width should be =< margin.left + margin.right + 1,
  of course 1 pixel for the entire chart would not be very useful, BUT should not have errors
*/
}

.DifferenceBoxRed {
    width: 170px;
    border: solid 1px #888;
    margin: 10px;
    padding: 10px;
    vertical-align: middle;
    text-align: center;
    display: inline-block; 
    box-shadow: 2px 2px 2px #000000; 
    border-radius: 10px;
    background-color: #b51b2a;
    background-image: -moz-linear-gradient(top, #b51b2a, #830915);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#b51b2a), to(#830915));
    background-image: -webkit-linear-gradient(top, #b51b2a, #830915);
    background-image: -o-linear-gradient(top, #b51b2a, #830915);
    background-image: linear-gradient(to bottom, #b51b2a, #830915);
    background-repeat: repeat-x;
    color: white;
}

.DifferenceBoxGreen {
    width: 170px;
    border: solid 1px #888;
    margin: 10px;
    padding: 10px;
    vertical-align: middle;
    text-align: center;
    display: inline-block; 
    box-shadow: 2px 2px 2px #000000; 
    border-radius: 10px;
    background-color: #cbd31e;
    background-image: -moz-linear-gradient(top, #cbd31e, #959f16);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#cbd31e), to(#959f16));
    background-image: -webkit-linear-gradient(top, #cbd31e, #959f16);
    background-image: -o-linear-gradient(top, #cbd31e, #959f16);
    background-image: linear-gradient(to bottom, #00dd00, #00aa00);
    background-repeat: repeat-x;
    color: white;
}

.header {
	background-color: #222222; 
	position: relative; 
	top: -0.8em;
	left: 0px;
	margin-bottom: 20px;
	padding:10px;
	color: #dddddd;
    border-bottom: 1px solid #dddddd;
}

#HeaderNavContainer {
    background-color: #222222;
    border-bottom: 1px solid #000000;
    color: #DDDDDD;
    left: 0;
    margin: 0 0 4px;
    height: 46px;
    padding: 10px 10px 36px 9px;
    position: relative;
    top: -0.8em;
}
#HeaderNavContainer h4{
	font-size:13pt;
}

#lnkHelpMenu{
	color:#FFFFFF;
}
#lnkMapsSlideToggle {
    border: 1px solid #DDDDDD;
    display: block;
    margin: 0 0 10px;
    padding: 3px 5px 4px;
}
#lnkMapsSlideToggle:hover {
	border: 1px solid #9999FF;
}

.iconsNav{
    margin-bottom: 0px;
    padding: 0px;
}

.iconsNav li {
    height: 50px;
    list-style: none outside none;
    min-width: 50px;
    padding: 6px 0 0;
    text-align: center;
}
.iconsNav.iconsNav-right li {
    padding: 4px 0 0;
}
.iconsNav li.active{
    background-color: #000000;
}
.iconsNav li a{
	width:60px;
	padding: 0px;
	text-decoration: none;
}

.iconsNav li .txt{
	font-size:8pt;
}

#lnkFeedback{
	margin-left:10px
}
#aboutFeedback{
	color:#FFFFFF;
}

#searchMapsSlide{
	font-size:10pt;
}

.hero-unit {
    background-image: url(../Images/AA_Hero_01.png);
}

.hero-unit-small {
    background: url(../Images/AA_Hero_01.png) no-repeat;
}

.hero-unit-small {
  padding: 100px 60px 20px;
  margin-top:30px;
  margin-bottom: 30px;
  /*font-size: 18px;*/
  color: #232323;
  font-weight: 200;
  line-height: 20px;
  background-color: #eeeeee;
  -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
          border-radius: 6px;
}

.hero-unit-small h1 {
  margin-bottom: 0;
  /*font-size: 60px;*/
  line-height: 1;
  letter-spacing: -1px;
  color: inherit;
}

.hero-unit-small li {
  line-height: 30px;
}
/* ... */

